--- a/GetGoingClass/Info.plist
+++ b/GetGoingClass/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>to store your beautiful pictures!</string>
+	<key>NSCameraUsageDescription</key>
+	<string>To take awesome pictures</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>We&apos;ll find you the best places around!</string>
 	<key>CFBundleDevelopmentRegion</key>
